# knight-tours-max-point

./: CMakeLists.txt  README.md
inputs/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  output1.txt  output2.txt  output3.txt  output4.txt  output6.txt
src/: chess_table.cc  chess_table.h  chess_table_io_abstract.h  chess_table_io_handler.cc  chess_table_io_handler.h  chess_table_law_abstract.h  chess_table_piece_movement.cc  chess_table_piece_movement.h  main.cc  project_config.h
